Fix alignment on bubble and remove black box on mobile (#13428)
* Fix alignment within grid within bubbles & remove floating black box on mobile

* Fix alignment of 'canonical' in the reduced mobile nav

* Add missing requirements

* Actually add missing requirements

* Align navigation to grid text

* Appease lint gods

* Update color of side nav tabs when active

* Align first nav item with text

* Appease linter

* Align items inside the dropdown ith page text

--- a/static/sass/_pattern_navigation-dropdown.scss
+++ b/static/sass/_pattern_navigation-dropdown.scss
@@ -86,8 +86,8 @@
           display: none;
         }
 
-        &.js-tab.is-active {
-          background-color: #2d2d2d;
+        &.is-active {
+          background: #2d2d2d;
         }
       }
 
@@ -114,7 +114,7 @@
 
   .dropdown-window__main-panel,
   .dropdown-window__side-panel {
-    margin: 2.5rem 0;
+    margin: 2.5rem 0 2.5rem -0.5rem;
 
     .p-muted-heading {
       color: rgba(255, 255, 255, 0.6);
